--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 			<h1>My Home Page</h1>
 		</header>
 		<div id="content">
-			<p>Here is sample content</p>
+			<h3>Introduction</h3>
+			<p>Hello, welcome to my website. This website will outline some of my interests, hobbies, and other nonsense I decide to put here</p>
+			<h3>Interests - Sports</h3>
+			<p>I like watching sports, particularly ice hockey and baseball. My favorite teams are Philadelphia Flyers for ice hockey and the Philadelphia Phillies
+				for baseball. I also like the Philadelphia Eagles and the Philadelphia 76ers, who are the city's American football and basketball teams,
+				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them since I could care less
+				about soccer or association football.</p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
