--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 			<h3>Interests - Sports</h3>
 			<p>I like watching sports, particularly ice hockey and baseball. My favorite teams are Philadelphia Flyers for ice hockey and the Philadelphia Phillies
 				for baseball. I also like the Philadelphia Eagles and the Philadelphia 76ers, who are the city's American football and basketball teams,
-				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them since I could care less
-				about soccer or association football.</p>
+				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them.</p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
