--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 			<h3>Interests - Sports</h3>
 			<p>I like watching sports, particularly ice hockey and baseball. My favorite teams are Philadelphia Flyers for ice hockey and the Philadelphia Phillies
 				for baseball. I also like the Philadelphia Eagles and the Philadelphia 76ers, who are the city's American football and basketball teams,
-				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them.</p>
+				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them. In addition to
+				Philadelphia sports, I also follow the Washington Capitals hockey team and the Washington Nationals baseball team, since they are the major league
+				affiliates to minor league teams I like, the Hershey Bears of the American Hockey League and the Harrisburg Senators of the Eastern League of AA
+				Minor League Baseball.
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
