--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them. In addition to
 				Philadelphia sports, I also follow the Washington Capitals hockey team and the Washington Nationals baseball team, since they are the major league
 				affiliates to minor league teams I like, the Hershey Bears of the American Hockey League and the Harrisburg Senators of the Eastern League of AA
-				Minor League Baseball.
+				Minor League Baseball.</p>
+			<h3>Interests - Video Games</h3>
+			<p>Lorem ipsum dolor</p>
+			<h3>Interests - Cars</h3>
+			<p>I really like cars. My obession with them came from my younger brothe who is also into cars. I primarily like cars from since the 1980s onward because
+				I think anything before that would be too old for my taste. My dream car would be a Ford Mustang because my Grandpa on my Mom's side had one from
+				the 1960s/early 1970s in a color called "Aspen Gold". He died in 1993, 12 years before I was even born, in a work accident. It was such a shame 
+				because I would probably enjoy it.</p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
