--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				for baseball. I also like the Philadelphia Eagles and the Philadelphia 76ers, who are the city's American football and basketball teams,
 				respectfully. Philadelphia also has a Major League Soccer (MLS) team called the Philadelphia Union, but I do not watch them. In addition to
 				Philadelphia sports, I also follow the Washington Capitals hockey team and the Washington Nationals baseball team, since they are the major league
-				affiliates to minor league teams I like, the Hershey Bears of the American Hockey League and the Harrisburg Senators of the Eastern League of AA
+				affiliates to minor league teams I like, the Hershey Bears of the American Hockey League and the Harrisburg Senators of the AA Eastern League of
 				Minor League Baseball.</p>
 			<h3>Interests - Video Games</h3>
 			<p>Lorem ipsum dolor</p>
