--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				affiliates to minor league teams I like, the Hershey Bears of the American Hockey League and the Harrisburg Senators of the AA Eastern League of
 				Minor League Baseball.</p>
 			<h6>Video Games</h6>
-			<p>Lorem ipsum dolor</p>
+			<p>My favorite videogame is Forza Horizon 4, which an open-world racing game. It would make sense if you look at my other categories.</p>
 			<h6>Cars</h6>
 			<p>I really like cars. My obession with them came from my younger brothe who is also into cars. I primarily like cars from since the 1980s onward because
 				I think anything before that would be too old for my taste. My dream car would be a Ford Mustang because my Grandpa on my Mom's side had one from
