--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<div id="content">
 			<h3>Introduction</h3>
 			<p>Hello, welcome to my website. This website will outline some of my interests, hobbies, and other nonsense I decide to put here</p>
+			<h3>Browse the Website</h3>
 			
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
