--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h3>Introduction</h3>
 			<p>Hello, welcome to my website. This website will outline some of my interests, hobbies, and other nonsense I decide to put here</p>
 			<h3>Browse the Website</h3>
-			
+			<p><a href="https://aurenko.github.io/interests.html">My Interests</a></p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
