--- a/interests.html
+++ b/interests.html
@@ -23,7 +23,7 @@
 				I think anything before that would be too old for my taste. My dream car would be a Ford Mustang because my Grandpa on my Mom's side had one from
 				the 1960s/early 1970s in a color called "Aspen Gold". He died in 1993, 12 years before I was even born, in a work accident. It was such a shame 
 				because I would probably enjoy it.</p>
-			<h5>Other Tabs</h5>
+			<h3>Browse the Website</h3>
 			<p><a href="https://aurenko.github.io/index.html">Home Page</a></p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
