--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="content">
 			<p>Hello, welcome to my website. This website will outline some of my interests, hobbies, and other nonsense I decide to put here</p>
 			<h3>Browse the Website</h3>
-			<p><a href="https://aurenko.github.io/interests.html">My Interests</a></p>
+			<p>Home Page <a href="https://aurenko.github.io/interests.html">Interests</a></p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
