--- a/interests.html
+++ b/interests.html
@@ -22,7 +22,7 @@
 				the 1960s/early 1970s in a color called "Aspen Gold". He died in 1992, 13 years before I was even born, in a work accident. It was such a shame 
 				because I would probably enjoy it.</p>
 			<h3>Browse the Website</h3>
-			<p><a href="https://aurenko.github.io/index.html">Home Page</a> Interests</p>
+			<p><a href="https://aurenko.github.io/index.html">Home Page</a> Interests <a href="https://aurenko.github.io/hobbies.html"> Hobbies</a></p>
 		</div>
 		<footer> &copy; 2021 Drew Urenko </footer>
 	</body>
