--- a/hobbies.html
+++ b/hobbies.html
@@ -13,10 +13,8 @@
 			<p>I like drawing stuff, especially road maps of fictional places.</p>
 			<img src="https://m.media-amazon.com/images/I/61nTuLYI7pL._AC_SL1000_.jpg" width=500>
 			<h5>Video Games</h5>
-			<p>I really like cars. My obession with them came from my younger brothe who is also into cars. I primarily like cars from since the 1980s onward because
-				I think anything before that would be too old for my taste. My dream car would be a Ford Mustang because my Grandpa on my Mom's side had one from
-				the 1960s/early 1970s in a color called "Aspen Gold". He died in 1992, 13 years before I was even born, in a work accident. It was such a shame 
-				because I would probably enjoy it.</p>
+			<p>I really like cars. My obession with them came from my younger brother who is also into cars. I primarily like cars from since the 1980s onward because
+				I think anything before that would be too old for my taste. </p>
 			<h3>Browse the Website</h3>
 			<p><a href="https://aurenko.github.io/index.html">Home Page</a> <a href="https://aurenko.github.io/interests.html">Interests</a> Hobbies</p>
 		</div>
