--- a/hobbies.html
+++ b/hobbies.html
@@ -13,8 +13,10 @@
 			<p>I like drawing stuff, especially road maps of fictional places.</p>
 			<img src="https://m.media-amazon.com/images/I/61nTuLYI7pL._AC_SL1000_.jpg" width=500>
 			<h5>Video Games</h5>
-			<p>I really like cars. My obession with them came from my younger brother who is also into cars. I primarily like cars from since the 1980s onward because
-				I think anything before that would be too old for my taste. </p>
+			<p>I like to play video games in my free time. I have an Xbox One, which is what I play my games on. I got mine seven years ago, and am looking to upgrade
+				to the Xbox Series X. However, it is in incredibly short supply. I primarily play sports games like the NHL games about ice hockey from EA and the 
+				MLB The Show games from Sony. I also enjoy playing the Forza Horizon series of games, and there is a new one that is about to come out, which I am
+				very excited for.</p>
 			<h3>Browse the Website</h3>
 			<p><a href="https://aurenko.github.io/index.html">Home Page</a> <a href="https://aurenko.github.io/interests.html">Interests</a> Hobbies</p>
 		</div>
