--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<header>
 			<h1>Introduction</h1>
+			<img src="file:///C:/Users/drewu/Pictures/20211027_170322.jpg" width=75>
 		</header>
 		<div id="content">
 			<p>Hello, welcome to my website. This website will outline some of my interests, hobbies, and other nonsense I decide to put here</p>
