--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Introduction</h1>
-			<img src="20211027_170322.jpg" width=75>
+			<h1>Introduction <img src="20211027_170322.jpg" width=75></h1>
+			
 		</header>
 		<div id="content">
 			<p>Hello, welcome to my website. This website will outline some of my interests, hobbies, and other nonsense I decide to put here</p>
