--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Hobbies <img src="20211027_170322.jpg"></h1>
+			<h1>Hobbies <img src="20211027_170322.jpg" width=75></h1>
 		</header>
 		<div id="content">
 			<h3>Drawing</h3>
