--- a/interests.html
+++ b/interests.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Interests <img src="20211027_170322.jpg"</h1>
+			<h1>Interests <img src="20211027_170322.jpg" width=75></h1>
 		</header>
 		<div id="content">
 			<h5>Sports</h5>
