--- a/interests.html
+++ b/interests.html
@@ -30,7 +30,7 @@
 				the 1960s/early 1970s in a color called "Antique Bronze". He died in 1992, 13 years before I was even born, in a work accident. It was such a shame 
 				because I would probably have enjoyed it.</p>
 			<img src="https://www.cnet.com/a/img/3vwkGb5WITg4dttXkrXYps_kyFg=/1240x775/2020/09/30/3bbaa877-fd32-45dc-84c2-2c685adef434/2020-ford-mustang-shelby-gt350-heritage-edition-3.jpg" width=500>
-			<img src="https://mustangattitude.com/mustang/1966/1966_00033_01.jpg">
+			<img src="https://mustangattitude.com/mustang/1966/1966_00033_01.jpg" height=100>
 			<h3>Browse the Website</h3>
 			<p><a href="https://aurenko.github.io/index.html">Home Page</a> Interests <a href="https://aurenko.github.io/hobbies.html"> Hobbies</a></p>
 		</div>
